--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -183,7 +183,7 @@ img {
 @media screen and (max-width: 767px) {
   .nav__menu {
     position: fixed;
-    bottom: -0;
+    bottom: -100%;
     left: 0;
     width: 100%;
     background-color: var(--body-color);
@@ -227,4 +227,10 @@ img {
 
 .nav__close:hover {
   color: var(--first-color-alt);
+}
+
+/* show menu */
+
+.show-menu {
+  bottom: 0;
 }
