--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -469,8 +469,7 @@ img {
 }
 
 .skills__close .skills__list {
-  height: 0;
-  overflow: hidden;
+  display: none;
 }
 
 .skills__open .skills__list {
