--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -236,6 +236,12 @@ img {
   bottom: 0;
 }
 
+/* show menu */
+
+.active-link {
+  color: var(--first-color);
+}
+
 /*==================== HOME ====================*/
 
 .home__container {
