--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -236,10 +236,16 @@ img {
   bottom: 0;
 }
 
-/* show menu */
+/* active links */
 
 .active-link {
   color: var(--first-color);
+}
+
+/* change background header */
+
+.scroll-header-shadow {
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.2);
 }
 
 /*==================== HOME ====================*/
@@ -770,4 +776,33 @@ textarea {
 .footer__link,
 .footer__social {
   color: #fff;
+}
+
+/*==================== SCROLL UP ====================*/
+
+.scrollup {
+  position: fixed;
+  right: 1rem;
+  bottom: -20%;
+  background-color: var(--first-color);
+  opacity: 0.8;
+  padding: 0 0.3rem;
+  border-radius: 0.4rem;
+  z-index: var(--z-tooltip);
+  transition: 0.4s;
+}
+
+.scrollup:hover {
+  background-color: var(--first-color-alt);
+}
+
+.scrollup__icon {
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+/* Show Scroll */
+
+.show-scroll {
+  bottom: 5rem;
 }
