--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -324,6 +324,8 @@ img {
 
 .home__description {
   margin-bottom: var(--mb-2);
+  font-size: var(--smaller-font-size);
+  text-align: justify;
 }
 
 .home__scroll {
@@ -396,7 +398,7 @@ img {
 
 .about__info {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   margin-bottom: var(--mb-2-5);
 }
 
@@ -553,6 +555,7 @@ img {
 .skills__github {
   width: 100%;
 }
+
 .skills__bitbucket {
   width: 100%;
 }
@@ -1052,7 +1055,8 @@ textarea {
   }
 
   .about__info {
-    justify-content: space-between;
+    justify-content: space-around;
+    text-align: justify;
   }
 
   .about__buttons {
