--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -521,7 +521,15 @@ img {
 .skills__mongoose {
   width: 50%;
 }
-
+.skills__python {
+  width: 50%;
+}
+.skills__django {
+  width: 50%;
+}
+.skills__mariadb {
+  width: 50%;
+}
 .skills__cypress {
   width: 80%;
 }
@@ -561,6 +569,9 @@ img {
 }
 .skills__agile {
   width: 80%;
+}
+.skills__docker {
+  width: 60%;
 }
 .skills__uml {
   width: 50%;
