--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -497,13 +497,13 @@ img {
 }
 
 .skills__react {
-  width: 70%;
+  width: 80%;
 }
 .skills__vue {
-  width: 80%;
+  width: 70%;
 }
 .skills__quasar {
-  width: 80%;
+  width: 70%;
 }
 .skills__typescript {
   width: 50%;
@@ -518,17 +518,15 @@ img {
 .skills__mongodb {
   width: 50%;
 }
-.skills__mongoose {
-  width: 50%;
-}
+
 .skills__python {
   width: 50%;
 }
 .skills__django {
   width: 50%;
 }
-.skills__mariadb {
-  width: 50%;
+.skills__mysql {
+  width: 80%;
 }
 .skills__cypress {
   width: 80%;
